--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
     "nuxt": "^2.0.0",
+    "object-to-formdata": "^3.0.9",
     "vue-moment": "^4.1.0"
   },
   "devDependencies": {
