--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
+    "eslint-plugin-import": "^2.20.2",
     "nuxt": "^2.0.0",
     "object-to-formdata": "^3.0.9",
     "vue-moment": "^4.1.0"
