--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
-    "@nuxtjs/auth": "^4.9.1",
-    "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/auth": "github:nuxt-community/auth-module#dev",
+    "@nuxtjs/auth-next": "^5.0.0-1591245799.e1935ad",
+    "@nuxtjs/axios": "^5.11.0",
     "@nuxtjs/dotenv": "^1.4.0",
     "eslint-plugin-import": "^2.20.2",
     "nuxt": "^2.0.0",
