--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@nuxtjs/auth-next": "^5.0.0-1591245799.e1935ad",
     "@nuxtjs/axios": "^5.11.0",
     "@nuxtjs/dotenv": "^1.4.0",
+    "@nuxtjs/toast": "^3.3.0",
     "eslint-plugin-import": "^2.20.2",
+    "material-design-icons": "^3.0.1",
     "nuxt": "^2.0.0",
+    "nuxt-material-design-icons": "^1.0.4",
     "object-to-formdata": "^3.0.9",
     "vue-moment": "^4.1.0"
   },
