--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nuxt": "^2.0.0",
     "nuxt-material-design-icons": "^1.0.4",
     "object-to-formdata": "^3.0.9",
+    "vue-content-placeholders": "^0.2.1",
     "vue-moment": "^4.1.0"
   },
   "devDependencies": {
