--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nuxt-material-design-icons": "^1.0.4",
     "object-to-formdata": "^3.0.9",
     "vue-content-placeholders": "^0.2.1",
+    "vue-loading-overlay": "^3.3.2",
     "vue-moment": "^4.1.0"
   },
   "devDependencies": {
